# NEURO-X

./: .gitignore  README.md
backend/: ai_engine.py  cpp_bridge.py  main.py  monitor.py  requirements.txt  threat_detector.py  websocket_manager.py
cpp-engine/: CMakeLists.txt  monitor_bridge.cpp  packet_sniffer.cpp  performance_monitor.cpp
cpp-engine/include/: monitor.h
cpp-engine/test/: main_test.cpp
docs/: ARCHITECTURE.md  VOICE_COMMANDS.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/electron/: main.js  preload.js
frontend/src/: index.css
frontend/src/components/: AIThinkingEngine.jsx  Dashboard.jsx  LoginScreen.jsx  NetworkAnalyzer.jsx  ParticleBackground.jsx  Sidebar.jsx  SystemMonitor.jsx  Terminal.jsx  VoiceCommand.jsx
frontend/src/hooks/: useWebSocket.js
frontend/src/pages/: App.jsx
frontend/src/utils/: soundEffects.js
